Fixed center and alignment

--- a/finding-android1/stylesheets/style.css
+++ b/finding-android1/stylesheets/style.css
@@ -2,21 +2,21 @@
 body {
   font-family: 'Orbitron', sans-serif;
   color: black;
-  background-color: #ffffff;
-}
-#android_logo{
-  text-align: center;
 }
 h1{
   text-align: center;
   font-style: "Orbitron", Arial, serif;
 }
+p{
+  text-align: center;
+}
+#intro{
+  text-align: center;
+}
 #bg{
-  /*margin: auto;*/
-  position:absolute;
   z-index:0;
 }
-#android{
+#android_level1{
   width: 20px;
   height: 25px;
   position:relative;
@@ -24,16 +24,23 @@ h1{
   left: 500px;
   z-index:1;
 }
-p{
-  text-align: center;
+#android_level2{
+  width: 20px;
+  height: 25px;
+  position:relative;
+  top: 431px;
+  left: 500px;
+  z-index:1;
 }
 .bglevels{
+  width: 85%;
+  height: 1232px;
+  margin: 0 auto;
+  background-image: url("http://www.pragmaticmom.com/wp-content/uploads/2014/05/map.jpg");
+}
+.bglevels2{
   width: 50%;
-  text-align: center;
-  margin-top: 10%;
-  margin-right: 10%;
-  /*position: absolute;*/
-  /*margin: auto;*/
+  margin: 0 auto;
 }
 .header{
   text-align: center;
